# TODO-App

./: README.md  pyproject.toml
documentation/: api_design.md  backend_structure.md  deployment_plan.md  frontend_structure_flutter.md  sequence_diagrams.md  user_flows.md
server/: main.py
