[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = ""
authors = ["Eemil Haapsaari <eemil@haapsaari.fi>"]
readme = "README.md"
packages = [{include = "*", from="server"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
passlib = "^1.7.4"
fastapi-jwt-auth = "^0.5.0"
pydantic = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:main"
